@@ -1,3 +1,7 @@
+2006-11-08  8:08 Mike Park  <mike.park@nasa.gov>
+
+	* src/grid.c (gridExportFASTSurface) export surface grid to FAST.
+
 2006-09-28  8:16 Mike Park  <mike.park@nasa.gov>
 
 	* src/grid.c (gridWriteTecplotVolumeGeom) tecplot entire volume.
